--- a/main.scss
+++ b/main.scss
@@ -6,3 +6,15 @@
         background: tomato;
     }
 }
+
+.fs {
+    &-small {
+        font-size: 14px;
+    }
+    &-medium {
+        font-size: 16px;
+    }
+    &-large {
+        font-size: 18px;
+    }
+}
